# search-fusion-mcp

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_zh.md  RELEASE_CHECKLIST.md  pyproject.toml  release.py  requirements.txt  setup.py
src/: __init__.py  main.py  search_manager.py  server.py  web_fetcher.py
src/config/: __init__.py  config_manager.py
src/engines/: __init__.py  baidu_search.py  base.py  bing_search.py  duckduckgo_search.py  exa_search.py  google_search.py  jina_search.py  serper_search.py
src/search_fusion_mcp/engines/: duckduckgo_search.py
